# TuiNovelHub

./: .gitignore  README.md  go.mod  go.sum
cmd/treading/: main.go
internal/config/: config.go
internal/db/: db.go  migrations.go  models.go  repository.go
internal/providers/: provider.go  registry.go
internal/providers/novelfire/: novelfire.go  novelfire_test.go
internal/sync/: sync.go  sync_test.go
internal/tui/: app.go  styles.go
internal/tui/chapters/: chapters.go
internal/tui/components/: spinner.go  statusbar.go  styles.go
internal/tui/msg/: msg.go
internal/tui/reader/: reader.go
internal/tui/search/: search.go
scratch-scraper/: .gitignore  LICENSE  README.md  pyproject.toml
scratch-scraper/.git_old/: config  index  packed-refs
scratch-scraper/.git_old/logs/: HEAD
scratch-scraper/.git_old/objects/pack/: pack-7bde9010ea6aa61a457bfa6fe8d934240f7994c6.idx  pack-7bde9010ea6aa61a457bfa6fe8d934240f7994c6.rev
scratch-scraper/.git_old/refs/heads/: main
scratch-scraper/config/: novelbin-provider.yaml  novelbuddy-provider.yaml  novelfire-provider.yaml  novelfull-provider.yaml  royalroad-provider.yaml  temp_config.yaml  wuxiaworld-provider.yaml
scratch-scraper/docs/: CACHE_ARCHITECTURE.md  CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_QUICK_REFERENCE.md  CACHE_SYSTEM.md  CONFIGURATION.md  CONTRIBUTING.md  COPY_EPUBS_FEATURE.md  DATABASE.md  EPUB_GENERATION.md  FONT_SELECTION.md  IMPORT_EXISTING_NOVELS.md  PROVIDER_DEVELOPMENT.md  PROVIDER_QUICK_START.md  README.md  TROUBLESHOOTING.md  TROUBLESHOOTING_DATABASE.md  USAGE.md  USER_CONFIGURATION.md
scratch-scraper/docs/providers/: novelfire.md
scratch-scraper/examples/: implement_new_provider.py  test_novelbin.py
scratch-scraper/requirements/: phase-01.md
scratch-scraper/requirements/epub/: css-sample.css  epub-sample.html
scratch-scraper/requirements/novelbuddy/: chapter-content-ajax.html  chapter-list-ajax.txt  chapter-page.html  novel-page.html
scratch-scraper/requirements/novelfire/: chapter-list-page.html  chapter-page.html  novel-page.html
scratch-scraper/requirements/novelfull/: chapter-page.html  page-novel.html
scratch-scraper/requirements/royalroad/: chapter-page.html  novel-page.html
scratch-scraper/requirements/wuxiaworld/: chapter-lists.txt  chapter-page.html  novel-page.html
scratch-scraper/scripts/: analyze_html_structure.py  import_existing_novels.py  move_epub.sh  validate_provider.py
scratch-scraper/src/wn_dl/: __init__.py  __main__.py  cli.py  config.py  utils.py
scratch-scraper/src/wn_dl/core/: __init__.py  base_scraper.py  cache_config.py  cache_manager.py  cache_validator.py  css_generator.py  database_migrations.py  database_models.py  ebooklib_epub_generator.py  epub_generator.py  font_manager.py  image_processor.py  markdown_generator.py  models.py  novel_database_service.py  novel_discovery.py  processor.py  retry_handler.py  user_config.py
scratch-scraper/src/wn_dl/core/ebooklib_components/: __init__.py  chapter_processor.py  css_processor.py  font_embedder.py  markdown_parser.py  metadata_handler.py
scratch-scraper/src/wn_dl/providers/: __init__.py  registry.py
scratch-scraper/src/wn_dl/providers/novelbin/: __init__.py  scraper.py
scratch-scraper/src/wn_dl/providers/novelbuddy/: __init__.py  scraper.py
scratch-scraper/src/wn_dl/providers/novelfire/: __init__.py  scraper.py
scratch-scraper/src/wn_dl/providers/novelfull/: __init__.py  scraper.py
scratch-scraper/src/wn_dl/providers/royalroad/: __init__.py  scraper.py
scratch-scraper/src/wn_dl/providers/wuxiaworld/: __init__.py  scraper.py
scratch-scraper/src/wn_dl/templates/: chapter.html  novel.css  user_config_template.yaml
scratch-scraper/tests/: debug_chapter_extraction.py  test_cache_config.py  test_cache_system.py  test_database_comprehensive.py  test_database_integration.py  test_font_integration.py  test_font_manager.py  test_import_script.py  test_real_scraping.py  test_royalroad_provider.py
scratch-scraper/tests/integration/: test_epub_formatting_integration.py
scratch-scraper/tests/performance/: test_cache_performance.py
scratch-scraper/tests/unit/core/: test_epub_generator.py  test_markdown_generator.py
